--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -31,9 +31,13 @@
     "next": "14.2.5",
     "next-themes": "0.3.0",
     "react": "18.3.1",
+    "rehype-katex": "7.0.1",
+    "rehype-pretty-code": "0.14.0",
     "rehype-react": "8.0.0",
+    "remark-math": "6.0.0",
     "remark-parse": "11.0.0",
     "remark-rehype": "11.1.0",
+    "shiki": "1.22.0",
     "unified": "11.0.5",
     "zod": "3.23.8"
   },
