--- a/.github/workflows/portfolio.yml
+++ b/.github/workflows/portfolio.yml
@@ -10,6 +10,10 @@ on:
     paths:
       - portfolio/**
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   Deployment:
     timeout-minutes: 5
