--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "eslint": "eslint ./src/ --cache --cache-strategy metadata",
     "prettier": "prettier . --write --cache --cache-strategy metadata",
-    "knip": "knip --cache --debug",
+    "knip": "knip --cache --debug --cache-location ./node_modules/.cache/knip",
     "check": "pnpm test && pnpm knip && pnpm prettier && pnpm eslint && pnpm tsc",
     "build-next": "next build",
     "build-storybook": "STORYBOOK_ENV=production storybook build --output-dir ./public/storybook",
@@ -23,13 +23,13 @@
   "dependencies": {
     "@headlessui/react": "2.2.0",
     "@t3-oss/env-core": "0.11.1",
-    "@tailwindcss/typography": "0.5.15",
+    "@tailwindcss/typography": "0.5.16",
     "cookies-next": "5.0.2",
-    "framer-motion": "11.15.0",
+    "framer-motion": "11.16.1",
     "graphql": "16.10.0",
     "graphql-request": "7.1.2",
     "lottie-react": "2.4.0",
-    "next": "15.1.3",
+    "next": "15.1.4",
     "next-themes": "0.4.4",
     "react": "18.3.1",
     "react-hook-form": "7.54.2",
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@cspell/eslint-plugin": "8.17.1",
-    "@next/eslint-plugin-next": "15.1.3",
+    "@next/eslint-plugin-next": "15.1.4",
     "@storybook/addon-a11y": "8.4.7",
     "@storybook/addon-essentials": "8.4.7",
     "@storybook/addon-themes": "8.4.7",
@@ -56,9 +56,9 @@
     "@storybook/react": "8.4.7",
     "@storybook/test": "8.4.7",
     "@types/node": "22.10.5",
-    "@types/react": "19.0.2",
-    "@typescript-eslint/eslint-plugin": "8.19.0",
-    "@typescript-eslint/parser": "8.19.0",
+    "@types/react": "19.0.4",
+    "@typescript-eslint/eslint-plugin": "8.19.1",
+    "@typescript-eslint/parser": "8.19.1",
     "@vitest/eslint-plugin": "1.1.24",
     "autoprefixer": "10.4.20",
     "dotenv": "16.4.7",
@@ -81,7 +81,7 @@
     "prettier-plugin-tailwindcss": "0.6.9",
     "storybook": "8.4.7",
     "storybook-dark-mode": "4.0.2",
-    "typescript": "5.7.2",
+    "typescript": "5.7.3",
     "vitest": "2.1.8"
   }
 }
